@@ -545,6 +545,10 @@ New Features
 
 * LUCENE-3179: Added OpenBitSet.prevSetBit (Paul Elschot via Mike McCandless)
 
+* LUCENE-3210: Made TieredMergePolicy more aggressive in reclaiming
+  segments with deletions; added new methods
+  set/getReclaimDeletesWeight to control this.  (Mike McCandless)
+
 Build
 
 * LUCENE-1344: Create OSGi bundle using dev-tools/maven.
